--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -18,7 +18,7 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="team-member"><img src="http://i.imgur.com/VFe7GUx.png" class="img-circle img-responsive" />
+                    <div class="team-member"><img src="http://i.imgur.com/uW2jiw5.png" class="img-circle img-responsive" />
                         <h4>Sol Beniquez</h4>
                         <p class="text-muted">Google Genius Developer</p>
                         <ul class="list-inline social-buttons">
